Add AngularJS to our project

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Pokédex</title>
+    <script src="../node_modules/angular/angular.min.js"></script>
   </head>
   <body>
+    {{'Cadena de texto'}}
   </body>
 </html>
