Directives and fix compatibilities problem with angular and node version

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html ng-app>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Pokédex</title>
-    <script src="../node_modules/angular/angular.min.js"></script>
+    <script src=".tmp/node_modules/angular/angular.min.js"></script>
   </head>
   <body>
-    {{'Cadena de texto'}}
+    <h1>
+      Bulbasaur #001
+    </h1>
+    <h2>Seed Pokemon</h2>
+    <img src="https://assets.pokemon.com/assets/cms2/img/pokedex/full/001.png" alt="Bulbasaur"/>
+    <ul>
+      <li>
+        Type: Grass, Poison
+      </li>
+      <li>
+        Weight: xx
+      </li>
+      <li>
+        Height: xx
+      </li>
+      <li>
+        Abilities:
+      </li>
+    </ul>
   </body>
 </html>
