--- a/public/index.html
+++ b/public/index.html
@@ -4,31 +4,77 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Pokédex</title>
+    <link rel="stylesheet" href=".tmp/node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href=".tmp/node_modules/bootswatch/dist/simplex/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <script src=".tmp/node_modules/angular/angular.min.js"></script>
+    <script src=".tmp/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="js/app.js"></script>
   </head>
   <body>
-    <div ng-controller="PokemonController as pkmCtrl">
-      <h1>
-        {{pkmCtrl.pokemon.name}} #{{pkmCtrl.pokemon.id}}
-      </h1>
-      <h2>{{pkmCtrl.pokemon.species}}</h2>
-      <img src="assets/img/pokemons/{{pkmCtrl.pokemon.name}}.jpg" alt="{{pkmCtrl.pokemon.name}}"/>
-      <h2>Pokédex</h2>
-      <ul>
-        <li>
-          <strong>Type:</strong> {{pkmCtrl.pokemon.type.join(', ')}}
-        </li>
-        <li>
-          <strong>Weight:</strong> {{pkmCtrl.pokemon.weight}}
-        </li>
-        <li>
-          <strong>Height</strong> {{pkmCtrl.pokemon.height}}
-        </li>
-        <li>
-          <strong>Abilities:</strong> {{pkmCtrl.pokemon.abilities.join(', ')}}
-        </li>
-      </ul>
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">
+            <img src="assets/img/logo.png" alt="Pokédex">
+            Pokédex
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div ng-controller="PokemonController as pkmCtrl">
+        <div class="page-header">
+          <h1>
+            {{pkmCtrl.pokemon.name | uppercase}}
+            <small>{{pkmCtrl.pokemon.species}}</small>
+            <span class="label label-primary pull-right">#{{pkmCtrl.pokemon.id}}</span>
+          </h1>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <img class="avatar center-block" ng-src="assets/img/pokemons/{{pkmCtrl.pokemon.name | lowercase}}.jpg" alt="{{pkmCtrl.pokemon.name}}"/>
+          </div>
+          <div class="col-md-6">
+            <ul class="nav nav-labs nav-justified">
+              <li class="active">
+                <a href="#">Pokédex</a>
+              </li>
+              <li>
+                <a href="#">Stats</a>
+              </li>
+              <li>
+                <a href="#">Evolution</a>
+              </li>
+            </ul>
+            <div class="tab-content">
+              <div>
+                <ul class="list-group">
+                  <li class="list-group-item">
+                    <strong>Type:</strong> 
+                    <span class="pull-right">{{pkmCtrl.pokemon.type.join(', ')}} </span>
+                  </li>
+                  <li class="list-group-item">
+                    <strong>Height</strong> 
+                    <span class="pull-right">{{pkmCtrl.pokemon.height}}</span>
+                  </li>
+                  <li class="list-group-item">
+                    <strong>Abilities:</strong> 
+                    <span class="pull-right">{{pkmCtrl.pokemon.abilities.join(', ')}} </span>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
