--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html ng-app="pokedex">
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
@@ -118,13 +117,52 @@
             <div ng-show="tabsCtrl.tab === 3">
               <div class="text-center" ng-repeat="pokemon in pkmCtrl.pokemon.evolutions">
                 <a href="#">
-                  <img ng-src="assets/img/pokemons/{{pokemon | lowercase}}.jpg" alt="{{pokemon}}" width="160" />
+                  <img src="{{pokemon | imageify}}" alt="{{pokemon}}" width="160" />
                   <p>
                     <strong>{{pokemon}}</strong>
                   </p>
                 </a>
                 <span ng-hide="$last" class="glyphicon glyphicon-arrow-down"></span>
               </div>
+            </div>
+          </div>
+        </div>
+        <div ng-controller="CommentController as cmtCtrl">
+          <button ng-hide="cmtCtrl.show" class="btn btn-primary" ng-click="cmtCtrl.toggle()"> Show comments <span class="badge">{{comtCtrl.comments.length}}</span></button>
+          <div ng-show="cmtCtrl.show" class="panel panal-primary">
+            <div class="panel-heading">
+              <h1 class="panel-title">Comments <button class="close pull-right" ng-click="cmtCtrl.toggle()">&times;</button></h1>
+            </div>
+            <div class="panel-body">
+              <form class="form-horizontal" role="form">
+                <div class="form-group">
+                  <div class="col-sm-6">
+                    <textarea placeholder="Please tell us what you think about {{pkmCtrl.pokemon.name}}" class="form-control"></textarea>
+                  </div>
+                  <div class="col-sm-4">
+                    <input type="email" placeholder="Please enter your email address"  class="form-control" />
+                    <label>
+                      <input id="anonymous" type="checkbox" />
+                      Anonymous
+                    </label>
+                  </div>
+                  <div class="col-sm-2">
+                    <button class="btn btn-lg">Comment</button>
+                  </div>
+                </div>
+              </form>
+              <blockquote>
+                <p>OMG Bulbasaur is AMAZING!!!</p>
+                <footer>
+                  Comment by <a href="mailto:pepe@pepe.com">pepe@pepe.com</a> on <span>Sep 12, 2014, 11:00:00 PM</span>
+                </footer>
+              </blockquote>
+              <blockquote>
+                <p>Nah, I hate it 😑</p>
+                <footer>
+                  Comment by <em>Anonymous</em> on <span>Sep 12, 2014, 11:00:00 PM</span>
+                </footer>
+              </blockquote>
             </div>
           </div>
         </div>
