--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html ng-app="pokedex">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
@@ -128,39 +129,43 @@
           </div>
         </div>
         <div ng-controller="CommentController as cmtCtrl">
-          <button ng-hide="cmtCtrl.show" class="btn btn-primary" ng-click="cmtCtrl.toggle()"> Show comments <span class="badge">{{comtCtrl.comments.length}}</span></button>
+          <button ng-hide="cmtCtrl.show" class="btn btn-primary" ng-click="cmtCtrl.toggle()"> Show comments <span
+              class="badge">{{comtCtrl.comments.length}}</span></button>
           <div ng-show="cmtCtrl.show" class="panel panal-primary">
             <div class="panel-heading">
-              <h1 class="panel-title">Comments <button class="close pull-right" ng-click="cmtCtrl.toggle()">&times;</button></h1>
+              <h1 class="panel-title">Comments <button class="close pull-right"
+                  ng-click="cmtCtrl.toggle()">&times;</button></h1>
             </div>
             <div class="panel-body">
-              <form class="form-horizontal" role="form">
+              <form class="form-horizontal" role="form" ng-submit="cmtCtrl.addComment()">
                 <div class="form-group">
                   <div class="col-sm-6">
-                    <textarea placeholder="Please tell us what you think about {{pkmCtrl.pokemon.name}}" class="form-control"></textarea>
+                    <textarea ng-model="cmtCtrl.comment.body"
+                      placeholder="Please tell us what you think about {{pkmCtrl.pokemon.name}}"
+                      class="form-control"></textarea>
                   </div>
                   <div class="col-sm-4">
-                    <input type="email" placeholder="Please enter your email address"  class="form-control" />
+                    <input ng-model="cmtCtrl.comment.email" ng-disabled="cmtCtrl.comment.anonymous" type="email"
+                      placeholder="Please enter your email address" class="form-control" />
                     <label>
-                      <input id="anonymous" type="checkbox" />
+                      <input ng-model="cmtCtrl.comment.anonymous" id="anonymous" ng-change="cmtCtrl.anonymousChanged()"
+                        type="checkbox" />
                       Anonymous
                     </label>
                   </div>
                   <div class="col-sm-2">
-                    <button class="btn btn-lg">Comment</button>
+                    <button type="submit" class="btn btn-lg">Comment</button>
                   </div>
                 </div>
               </form>
-              <blockquote>
-                <p>OMG Bulbasaur is AMAZING!!!</p>
+              <blockquote ng-repeat="comment in cmtCtrl.comments">
+                <p>{{comment.body}}</p>
                 <footer>
-                  Comment by <a href="mailto:pepe@pepe.com">pepe@pepe.com</a> on <span>Sep 12, 2014, 11:00:00 PM</span>
-                </footer>
-              </blockquote>
-              <blockquote>
-                <p>Nah, I hate it 😑</p>
-                <footer>
-                  Comment by <em>Anonymous</em> on <span>Sep 12, 2014, 11:00:00 PM</span>
+                  Comment by
+                  <a ng-if="!comment.anonymous"
+                    href="mailto:{{comment.email}}">{{comment.email}}</a>
+                  <em ng-if="comment.anonymous">Anonymous</em>
+                  on <span>{{comment.date | date : 'dd/MM/yyyy hh:mm:ss'}}</span>
                 </footer>
               </blockquote>
             </div>
