Validation and filters into forms

--- a/public/index.html
+++ b/public/index.html
@@ -35,16 +35,11 @@
   <div class="container">
     <div ng-controller="PokemonController as pkmCtrl">
       <div class="page-header">
-        <h1>
-          {{pkmCtrl.pokemon.name | uppercase}}
-          <small>{{pkmCtrl.pokemon.species}}</small>
-          <span class="label label-primary pull-right">#{{pkmCtrl.pokemon.id}}</span>
-        </h1>
+        <pokemon-name></pokemon-name>
       </div>
       <div class="row">
         <div class="col-md-6">
-          <img class="avatar center-block" ng-src="assets/img/pokemons/{{pkmCtrl.pokemon.name | lowercase}}.jpg"
-            alt="{{pkmCtrl.pokemon.name}}" />
+          <pokemon-image></pokemon-image>
         </div>
         <div class="col-md-6" ng-controller="TabsController as tabsCtrl">
           <ul class="nav nav-tabs nav-justified">
@@ -60,117 +55,17 @@
           </ul>
           <div class="tab-content">
             <div ng-show="tabsCtrl.tab === 1">
-              <ul class="list-group">
-                <li class="list-group-item">
-                  <strong>Type:</strong>
-                  <span class="pull-right">
-                    <span class="label type-{{type | lowercase}}" ng-repeat="type in pkmCtrl.pokemon.type">
-                      {{type}}
-                    </span>
-                  </span>
-                </li>
-                <li class="list-group-item">
-                  <strong>Height</strong>
-                  <span class="pull-right">{{pkmCtrl.pokemon.height}}</span>
-                </li>
-                <li class="list-group-item">
-                  <strong>Abilities:</strong>
-                  <ul>
-                    <li ng-repeat="ability in pkmCtrl.pokemon.abilities">
-                      {{ability}}
-                    </li>
-                  </ul>
-                </li>
-              </ul>
+              <pokemon-data></pokemon-data>
             </div>
             <div ng-show="tabsCtrl.tab === 2">
-              <ul class="list-group">
-                <li class="list-group-item">
-                  <strong>HP</strong>
-                  <span class="badge">{{pkmCtrl.pokemon.stats.hp}}</span>
-                </li>
-                <li class="list-group-item">
-                  <strong>Attack</strong>
-                  <span class="badge">{{pkmCtrl.pokemon.stats.attack}}</span>
-                </li>
-                <li class="list-group-item">
-                  <strong>Defense</strong>
-                  <span class="badge">{{pkmCtrl.pokemon.stats.defense}}</span>
-                </li>
-                <li class="list-group-item">
-                  <strong>Special Attack</strong>
-                  <span class="badge">{{pkmCtrl.pokemon.stats['sp.atk']}}</span>
-                </li>
-                <li class="list-group-item">
-                  <strong>Special Defense</strong>
-                  <span class="badge">{{pkmCtrl.pokemon.stats['sp.def']}}</span>
-                </li>
-                <li class="list-group-item">
-                  <strong>Speed</strong>
-                  <span class="badge">{{pkmCtrl.pokemon.stats.speed}}</span>
-                </li>
-                <li class="list-group-item">
-                  <strong>Total</strong>
-                  <span class="badge">{{pkmCtrl.pokemon.stats.total}}</span>
-                </li>
-              </ul>
+                <pokemon-stats></pokemon-stats>
             </div>
             <div ng-show="tabsCtrl.tab === 3">
-              <div class="text-center" ng-repeat="pokemon in pkmCtrl.pokemon.evolutions">
-                <a href="#">
-                  <img src="{{pokemon | imageify}}" alt="{{pokemon}}" width="160" />
-                  <p>
-                    <strong>{{pokemon}}</strong>
-                  </p>
-                </a>
-                <span ng-hide="$last" class="glyphicon glyphicon-arrow-down"></span>
-              </div>
+              <pokemon-evolution>ƒ</pokemon-evolution>
             </div>
           </div>
         </div>
-        <div ng-controller="CommentController as cmtCtrl">
-          <button ng-hide="cmtCtrl.show" class="btn btn-primary" ng-click="cmtCtrl.toggle()"> Show comments <span
-              class="badge">{{comtCtrl.comments.length}}</span></button>
-          <div ng-show="cmtCtrl.show" class="panel panal-primary">
-            <div class="panel-heading">
-              <h1 class="panel-title">Comments <button class="close pull-right"
-                  ng-click="cmtCtrl.toggle()">&times;</button></h1>
-            </div>
-            <div class="panel-body">
-              <form class="form-horizontal" role="form" ng-submit="cmtCtrl.addComment()">
-                <div class="form-group">
-                  <div class="col-sm-6">
-                    <textarea ng-model="cmtCtrl.comment.body"
-                      placeholder="Please tell us what you think about {{pkmCtrl.pokemon.name}}"
-                      class="form-control"></textarea>
-                  </div>
-                  <div class="col-sm-4">
-                    <input ng-model="cmtCtrl.comment.email" ng-disabled="cmtCtrl.comment.anonymous" type="email"
-                      placeholder="Please enter your email address" class="form-control" />
-                    <label>
-                      <input ng-model="cmtCtrl.comment.anonymous" id="anonymous" ng-change="cmtCtrl.anonymousChanged()"
-                        type="checkbox" />
-                      Anonymous
-                    </label>
-                  </div>
-                  <div class="col-sm-2">
-                    <button type="submit" class="btn btn-lg">Comment</button>
-                  </div>
-                </div>
-              </form>
-              <blockquote ng-repeat="comment in cmtCtrl.comments">
-                <p>{{comment.body}}</p>
-                <footer>
-                  Comment by
-                  <a ng-if="!comment.anonymous"
-                    href="mailto:{{comment.email}}">{{comment.email}}</a>
-                  <em ng-if="comment.anonymous">Anonymous</em>
-                  on <span>{{comment.date | date : 'dd/MM/yyyy hh:mm:ss'}}</span>
-                </footer>
-              </blockquote>
-            </div>
-          </div>
-        </div>
+        <pokemon-comments></pokemon-comments>
       </div>
     </div>
   </div>
