--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
   <script src=".tmp/node_modules/jquery/dist/jquery.min.js"></script>
   <script src=".tmp/node_modules/angular/angular.min.js"></script>
   <script src=".tmp/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="js/controllers.js"></script>
+  <script src="js/filters.js"></script>
+  <script src="js/directives.js"></script>
   <script src="js/app.js"></script>
 </head>
 
