--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Pokédex</title>
+  <title>{{title}}</title>
   <link rel="stylesheet" href=".tmp/node_modules/bootstrap/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href=".tmp/node_modules/bootswatch/dist/simplex/bootstrap.min.css" />
   <link rel="stylesheet" href="css/bootstrap-theme.min.css" />
