Show avatar in comments with gravatar

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
   <script src=".tmp/node_modules/jquery/dist/jquery.min.js"></script>
   <script src=".tmp/node_modules/angular/angular.min.js"></script>
   <script src=".tmp/node_modules/angular-route/angular-route.min.js"></script>
+  <script src=".tmp/node_modules/angular-md5/angular-md5.min.js"></script>
   <script src=".tmp/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/filters.js"></script>
