--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
   <script src=".tmp/node_modules/angular-route/angular-route.min.js"></script>
   <script src=".tmp/node_modules/angular-md5/angular-md5.min.js"></script>
   <script src=".tmp/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="js/controllers.js"></script>
-  <script src="js/filters.js"></script>
-  <script src="js/directives.js"></script>
-  <script src="js/services.js"></script>
+  <script src="js/controllers/index.js"></script>
+  <script src="js/filters/index.js"></script>
+  <script src="js/directives/index.js"></script>
+  <script src="js/services/index.js"></script>
   <script src="js/app.js"></script>
 </head>
 
